# repo-scan

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: SemgrepScanner.hpp  issue.hpp  orchestrator.hpp  report.hpp  scanner.hpp
src/: main.cpp  orchestrator.cpp
tests/: test_orchestrator.cpp
